<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>petra_central_control</name>
    <version>1.0.0</version>
    <description>
        This package provides the central control for PeTRA.
        It uses the BehaviorTree.CPP framework for abstract planning.
    </description>
    <maintainer email="andreas.zachariae@gmail.com">Andreas Zachariae</maintainer>
    <license>TODO</license>
    <author>Andreas Zachariae</author>
    <author>Moritz Weisenböhler</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>petra_core</depend>
    <depend>BehaviorTree</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>